--- a/first.html
+++ b/first.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style type="text/css">
+        .a1,.a2,.a3{
+            display:inline-block; 
+        }
+        img{
+            border-radius: 100%;
+            background-color: lightgray;
+            height:23px;
+            width: 23px;
+        }
+    </style>
     
 </head>
 <body>
-    <p>
-        MY FIRST ATTEMPT
-    </p>
+    <div>
+        <div>
+            <div class="a1">
+                <img src="bar.svg">
+            </div>
+            <form class="a2">
+                <input type="search" name="search" placeholder="search your dream house">
+            </form>
+            <div class="a3">
+                <img src="circleuser.svg">
+            </div>
+        </div>  
+    </div>
 </body>
 </html>
